@startuml
title Kindle Publishing Service

CatalogItemVersion --o CatalogDao
PublishingStatusItem --o PublishingStatusDao

class CatalogItemVersion {
  -@DynamoDBHashKey bookId : String
  -@DynamoDBRangeKey version : int
  -inactive : boolean
  -title : String
  -author : String
  -text : String
  -@DynamoDBTypeConvertedEnum genre : BookGenre
}
class PublishingStatusItem {
  -@DynamoDBHashKey publishingRecordId : String
  -@DynamoDBRangeKey status: PublishingRecordStatus
  -statusMessage: String
  -bookId: String
}
class CatalogDao {
  -dynamoDbMapper: DynamoDBMapper
  +getBookFromCatalog(String) : CatalogItemVersion
}
class PublishingStatusDao {
  -dynamoDbMapper: DynamoDBMapper
  +setPublishingStatus(String) : PublishingStatusItem
}

CatalogDao --* GetBookActivity
GetBookActivity *-- RecommendationsServiceClient
CatalogDao --* RemoveBookFromCatalogActivity
PublishingStatusDao --* GetPublishingStatusActivity
PublishingStatusDao --* SubmitBookForPublishingActivity


class GetBookActivity {
    +execute(GetBookRequest) : GetBookResponse
}

class RemoveBookFromCatalogActivity {
    +execute(RemoveBookFromCatalogRequest) : RemoveBookFromCatalogResponse
}
class SubmitBookForPublishingActivity {
    +execute(SubmitBookForPublishingRequest) : SubmitBookForPublishingResponse
}

class GetPublishingStatusActivity {
    +execute(GetPublishingStatusRequest) : GetPublishingStatusResponse
}

class RecommendationsServiceClient {
    +getBookRecommendations(BookGenre) : List<BookRecommendation>
}

PublishingStatusDao o- PublishingStatusNotFoundException
CatalogDao o- BookNotFoundException

class BookNotFoundException {
}
class PublishingStatusNotFoundException {
}

@enduml